# aca-python-agent-workbench-mcp

./: .editorconfig  .gitattributes  CONTRIBUTING.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  STORAGE_ARCHITECTURE.md  azure.yaml  demonstrate_test.py  run_full_test.sh  test-aspire.sh
.github/: copilot-instructions.md
.github/workflows/: aspire-ci.yml  ui-screenshot.yml
PythonAspireSample/: apphost.cs  apphost.run.json
PythonAspireSample/agent_mcp/: main.py  pyproject.toml
PythonAspireSample/app/: main.py  pyproject.toml
PythonAspireSample/frontend/: package-lock.json
tests/: README.md  manual_test.sh  pyproject.toml  run_azurite_test.sh  test_integration.py  test_smoke.py
